mongodb.yaml
#MongoDb-Internal-Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---

apiVersion: v1 
kind: Service 
metadata: 
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: "TCP"
      port: 27017
      targetPort: 27017
  type: NodePort
