mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo-setup
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mongo-express.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
